--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "serverless",
-  "version": "1.0.0",
-  "description": "Serverless",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jimytac/serverless.git"
-  },
-  "author": "Jimy Morales Caro",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jimytac/serverless/issues"
-  },
-  "homepage": "https://github.com/jimytac/serverless#readme"
+    "name": "serverless",
+    "version": "1.0.0",
+    "description": "Serverless",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jimytac/serverless.git"
+    },
+    "author": "Jimy Morales Caro",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/jimytac/serverless/issues"
+    },
+    "homepage": "https://github.com/jimytac/serverless#readme",
+    "dependencies": {
+        "aws-sdk": "2.902.0",
+        "axios": "0.21.1",
+        "serverless": "2.40.0"
+    },
+    "devDependencies": {
+        "serverless-offline": "7.0.0"
+    }
 }
